--- a/techExam/package.json
+++ b/techExam/package.json
@@ -1,34 +1,45 @@
 {
-    "name": "techexam",
-    "version": "1.0.0",
-    "description": "",
-    "main": "./dist/src/server.js",
-    "scripts": {
-        "clean": "rimraf dist/*",
-        "tsc-watch": "tsc -w",
-        "build-watch": "npm-run-all clean tsc-watch",
-        "start-watch": "nodemon dist/src/server.js",
-        "tsc": "tsc -p ./tsconfig.json",
-        "build": "npm-run-all clean tsc",
-        "dev:start": "npm-run-all build start",
-        "serve": "node dist/src/server.js",
-        "start": "npm-run-all build serve"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
-        "@types/node": "^18.6.3",
-        "typescript": "^4.7.4"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "mongoose": "^6.5.0",
-        "nodemon": "^2.0.19",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2"
-    }
+  "name": "techexam",
+  "version": "1.0.0",
+  "description": "",
+  "main": "./dist/src/server.js",
+  "scripts": {
+    "clean": "rimraf dist/*",
+    "tsc-watch": "tsc -w",
+    "build-watch": "npm-run-all clean tsc-watch",
+    "start-watch": "nodemon dist/src/server.js",
+    "tsc": "tsc -p ./tsconfig.json",
+    "build": "npm-run-all clean tsc",
+    "dev:start": "npm-run-all build start",
+    "serve": "node dist/src/server.js",
+    "start": "npm-run-all build serve",
+    "test": "jest"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.0",
+    "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.8.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.1.2",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "config": "^3.3.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.0",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2"
+  }
 }
