--- a/techExam/tsconfig.json
+++ b/techExam/tsconfig.json
@@ -33,9 +33,12 @@
       "*": ["node_modules/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    "typeRoots": [
-      "./node_modules/@types"
-    ] /* Specify multiple folders that act like './node_modules/@types'. */,
+    // "typeRoots": [
+    //   // "./node_modules/@types",
+    //   "./src/types",
+    //   "./node_modules/@types",
+    //   "./types"
+    // ] /* Specify multiple folders that act like './node_modules/@types'. */,
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
@@ -102,7 +105,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "types": ["jest", "node"],
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["./src/**/*"]
+  "exclude": ["node_modules/", "src/test"],
+  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
